--- a/.github/workflows/lava-trigger.yml
+++ b/.github/workflows/lava-trigger.yml
@@ -34,7 +34,7 @@ on:
         required: true
         type: string
 
-      testcase_url:
+      testcase_path:
         description: '需要执行的用例yaml 文件路径'
         required: true
         type: string
@@ -54,7 +54,7 @@ env:
   kernel_download_url: ${{ inputs.kernel_download_url }}
   rootfs_download_url: ${{ inputs.rootfs_download_url }}
   lava_template: ${{ inputs.lava_template }}
-  testcase_url: ${{ inputs.testcase_url }}
+  testcase_path: ${{ inputs.testcase_path }}
   lava_server: lava.oerv.ac.cn
   lava_admin_token: ${{ secrets.lava_token }}
   
@@ -85,7 +85,7 @@ jobs:
           echo "ssh_port=$(od -An -N2 -i /dev/urandom | awk -v min=10000 -v max=20000 '{print min + ($1 % (max - min + 1))}')" >> $GITHUB_OUTPUT
           qemu_job_name="${github_repo/\//_}_${event_name}_${issue_id:-"$(date +"%Y%m%d")"}"
           echo "qemu_job_name=$qemu_job_name" >> $GITHUB_OUTPUT
-          echo "testitem_name=${qemu_job_name}_$(echo "${testcase_url}" | awk -F'/' '{print $2}')" >> $GITHUB_OUTPUT
+          echo "testitem_name=${qemu_job_name}_$(echo "${testcase_path}" | awk -F'/' '{print $2}')" >> $GITHUB_OUTPUT
 
       - name: setup_lava_template
         shell: python3 {0}
@@ -105,8 +105,8 @@ jobs:
           lava_template = os.getenv("lava_template")
           assert lava_template, "Lava template is not set"
 
-          testcase_url = os.getenv("testcase_url")
-          assert testcase_url, "Testcase URL is not set"
+          testcase_path = os.getenv("testcase_path")
+          assert testcase_path, "Testcase URL is not set"
 
           qemu_job_name = os.getenv("qemu_job_name")
           assert qemu_job_name, "QEMU job name is not set"
@@ -137,7 +137,7 @@ jobs:
           if len(testcase_ref):
               data['actions'][2]['test']['definitions'][0]['revision'] = testcase_ref
           data['actions'][2]['test']['definitions'][0]['name'] = f'{testitem_name}_{data["device_type"]}' 
-          data['actions'][2]['test']['definitions'][0]['path'] = testcase_url
+          data['actions'][2]['test']['definitions'][0]['path'] = testcase_path
           data['actions'][2]['test']['definitions'][0].pop('parameters', None)
 
           with open(lava_template, 'w') as f:
@@ -266,7 +266,7 @@ jobs:
           - testcase_repo: ${testcase_repo}
           - testcase_ref: ${testcase_ref}
           - lava_template: ${lava_template}
-          - testcase_url: ${testcase_url}
+          - testcase_path: ${testcase_path}
           - kernel_download_url: ${kernel_download_url}
           - rootfs_download_url: ${rootfs_download_url}
           
