--- a/.github/workflows/lava-trigger.yml
+++ b/.github/workflows/lava-trigger.yml
@@ -239,10 +239,10 @@ jobs:
 
   collect-summary:
     outputs:
-      summary_content: ${{ steps.summary.outputs.summary_content }}
+      summary_content: ${{ steps.summary.outputs.summary_content || steps.onfailure.outputs.summary_content }}
     runs-on: 'ubuntu-latest'
     needs: [lava-trigger, lava-result]
-    if: ${{ needs.lava-trigger.outputs.lava_jobid && !cancelled() }}
+    if: ${{ !cancelled() }}
     env: 
       lava_jobid: ${{ needs.lava-trigger.outputs.lava_jobid }}
       testitem_name: ${{ needs.lava-trigger.outputs.testitem_name }}
@@ -253,7 +253,23 @@ jobs:
           sudo apt-get update
           sudo apt-get install lavacli
 
+      - id: onfailure
+        if: ${{ !needs.lava-trigger.outputs.lava_jobid }}
+        run: |
+          cat > summary_content <<EEE
+          ## LAVA Check
+
+          ---
+          ***lava 执行失败.***
+          ---
+          EEE
+          echo "summary_content<<EOF" >> $GITHUB_OUTPUT
+          cat summary_content >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+
       - id: summary
+        if: ${{ needs.lava-trigger.outputs.lava_jobid }}
         shell: bash
         run: |
           set -x
