--- a/.github/workflows/lava-trigger.yml
+++ b/.github/workflows/lava-trigger.yml
@@ -136,22 +136,23 @@ jobs:
           rootfs_download_url = os.getenv("rootfs_download_url")
           assert rootfs_download_url, "Rootfs download URL is not set"
 
-          def parse_yaml(file_path):
-              with open(file_path, "r") as file:
-                  content = file.read()
-                  return yaml.safe_load(content)
+          content = open(file_path, "r").read()\
+                    .replace("${job_name}", qemu_job_name)\
+                    .replace("${kernel_image_url}", kernel_download_url)\
+                    .replace("${rootfs_image_url}", rootfs_download_url)\
+                    .replace("${testcase_repo}", f"https://github.com/{testcase_repo}.git")\
+                    .replace("${testitem_name}", testitem_name)\
+                    .replace("${testcase_path}", testcase_path)
 
-          data =  parse_yaml(lava_template)
-          data["job_name"] = qemu_job_name
+          data = yaml.safe_load(content)
+
+          # qemu 需要设置ssh port
           if data['device_type'] == 'qemu' and 'context' in data and 'extra_options' in data['context']:
               data['context']['extra_options'] = [i.replace('hostfwd=tcp::10001-:22', f'hostfwd=tcp::{ssh_port}-:22') for i in list(data['context']['extra_options'])]
-          data['actions'][0]['deploy']['images']['kernel']['url'] = kernel_download_url
-          data['actions'][0]['deploy']['images']['rootfs']['url'] = rootfs_download_url
-          data['actions'][2]['test']['definitions'][0]['repository'] = f"https://github.com/{testcase_repo}.git"
+
           if len(testcase_ref):
               data['actions'][2]['test']['definitions'][0]['revision'] = testcase_ref
-          data['actions'][2]['test']['definitions'][0]['name'] = testitem_name
-          data['actions'][2]['test']['definitions'][0]['path'] = testcase_path
+
           data['actions'][2]['test']['definitions'][0].pop('parameters', None)
 
           with open(lava_template, 'w') as f:
