优化status 多行文本log

--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -41,7 +41,12 @@ jobs:
           |repo| $GH_REPO |
           |event name |$event_name |
           |event id |$event_id |
-          |append_content | "\`$(echo "${append_content}" | tr '\n' '\\')\`" |
+
+          append_content:
+          \`\`\`markdown
+          ${append_content}
+          \`\`\`
+
           EEE
    
       - name: append-content
