增加路径打印

--- a/.github/workflows/codelint.yml
+++ b/.github/workflows/codelint.yml
@@ -23,6 +23,7 @@ on:
   
 jobs:
   code-lint:
+    if: ${{ inputs.check_path }}
     outputs:
       shellcheck_result: ${{ steps.check.outputs.shellcheck_result }}
       yamllint_result: ${{ steps.check.outputs.yamllint_result }}
@@ -50,65 +51,99 @@ jobs:
       - name: ${{ matrix.check_type }}
         id: check
         shell: bash
+        continue-on-error: true
         env:
           check_path: ${{ inputs.check_path }}
           check_type:  ${{ matrix.check_type }}
         run: |
-      
-          declare -A message_files=()
-          declare -A message_type=()
-          check_path="$check_path"
+          set -x
+
+          check_path="${check_path}
+          "
+
+          set +e
           while read -r l; do
             if [ ! -d "$l" ] && [ ! -f "$l" ]; then continue; fi
-            {
+            case "$check_type" in
+              shellcheck)
+                find "$l" -type f -name "*.sh"
+                ;;
+              yamllint)
+                "$check_type" --list-files "$l"
+                ;;
+              esac
+          done <<< $check_path > need_check_files
+          
+          cat need_check_files
+          
+          declare -A all_msg_type=()
+          file_cnt=0
+          while read -r file; do
+            if [ ! -f "$file" ]; then continue; fi
+            
+            case "$check_type" in
+              shellcheck)
+                "$check_type" "$file" -f gcc
+                ;;
+              yamllint)
+                "$check_type" -f parsable "$file"
+                ;;
+            esac > parse_result
+
+            declare -A msg_cnt=()
+            
+            while read -r f msgtype info; do
+              if [ "$f" = "" ] || [ "$msgtype" = "" ]; then continue; fi
+              file_cnt=$((file_cnt + 1))
+              k="${msgtype%:}"
+              msg_cnt["${k}"]=$(( "${msg_cnt["${k}"]:-0}" + 1 ))
+              all_msg_type["${k}"]=$((${all_msg_type["${k}"]:-0} + 1))
+            done < parse_result
+            info=$(for k in "${!msg_cnt[@]}"; do echo -n "$k: ${msg_cnt[$k]}, "; done)
+            info=${info:-[ok]}
+            echo "| $file | ${info%,*} |"
+
+          done < need_check_files > info_result
+
+          cat info_result
+
+          cat > summary << EEE
+          ### $check_type result
+          
+          check_path:
+          
+          $(while read -r l; do [ "$l" != "" ] && echo "- $l"; done <<< "$check_path")
+          
+          ***$check_type $(for k in "${!all_msg_type[@]}"; do echo -n "$k: ${all_msg_type[$k]}, "; done) in ${file_cnt} files.***
+
+          | file | message count |
+          |:-|:-:|
+          $(cat info_result)
+          
+          EEE
+          echo "${check_type}_result<<EOF" >> $GITHUB_OUTPUT
+          cat summary >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+          {
+          cat summary
+          echo '```log'
+          while read -r l; do
+            if [ ! -d "$l" ] && [ ! -f "$l" ]; then continue; fi
             echo "check $l"
 
             case "$check_type" in
               shellcheck)
-                "$check_type" "$l"/**/*.sh
+                find "$l" -type f -name "*.sh" -exec "$check_type" {} \;
                 ;;
               yamllint)
-                "$check_type" "$l"
+                "$check_type" -f standard "$l"
                 ;;
             esac
-            } >> "$GITHUB_STEP_SUMMARY"
-          done <<< "$checkpath" 
-
-          echo "$GITHUB_STEP_SUMMARY"
-
-          while read -r l; do
-            if [ ! -d "$l" ] && [ ! -f "$l" ]; then continue; fi
-            case "$check_type" in
-              shellcheck)
-                "$check_type" "$l"/**/*.sh -f gcc 
-                ;;
-              yamllint)
-                "$check_type" -f parsable "$l"
-                ;;
-              esac
-          done  <<< "$checkpath" > parsable_result
+          done <<< "$check_path"
+          echo '```'
+          } >> $GITHUB_STEP_SUMMARY
           
-          while read -r f msgtype info; do
-            message_files["${f:*:*:}"]=$(( ${message_files["${f:*:*:}"]:-0} + 1 ))
-            message_type["${f:}"]=$(( "${message_type["${f:}"]:-0}" + 1 ))
-          done < parsable_result
-
-          cat > summary << EEE
-          ### $check_type result
-
-          ***$check_type $(for k in "${!message_type[@]}"; do echo -n "$k: ${message_type[$k]}"; done) in ${#message_files[@]} files.***
-
-          | file | message count |
-          |:-|:-:|
-          $(for f in "${!message_files[@]}"; do echo "| $f | ${message_files[$f]} |"; done)
-
-          EEE
-
-          cat summary >> $GITHUB_STEP_SUMMARY
-          
-          echo "${check_type}_result<<EOF" >> $GITHUB_OUTPUT
-          cat summary >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
 
 
   
