--- a/.github/workflows/rava-actions.yml
+++ b/.github/workflows/rava-actions.yml
@@ -15,6 +15,7 @@ jobs:
       testcase_repo: ${{ steps.parse.outputs.testcase_repo }}
       testcase_ref: ${{ steps.parse.outputs.testcase_ref }}
       summary: ${{ steps.parse.outputs.summary || steps.onfailure.outputs.summary }}
+      codelint_check_path: ${{ steps.parse.outputs.codelint_check_path }}
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       GH_REPO: ${{ github.repository }}
@@ -71,6 +72,12 @@ jobs:
           echo "lava_testcase_path=$lava_testcase_path" >> $GITHUB_OUTPUT
           echo "testcase_repo=${testcase_repo}" >> $GITHUB_OUTPUT
           echo "testcase_ref=${testcase_ref}" >> $GITHUB_OUTPUT
+          
+          echo "codelint_check_path<<EOF" >> $GITHUB_OUTPUT
+          dirname "${lava_template}" >> $GITHUB_OUTPUT
+          dirname "${lava_testcase_path}" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
           log_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID
           cat > summary << EOF
           ---
@@ -134,8 +141,17 @@ jobs:
       lava_template: ${{ needs.parse-request.outputs.lava_template }}
       testcase_path: ${{ needs.parse-request.outputs.lava_testcase_path }}
   
+  run-codelint:
+    needs: [parse-request]
+    if: ${{ needs.parse-request.outputs.codelint_check_path }}
+    uses: ./.github/workflows/codelint.yml
+    with:
+      repo: ${{ needs.parse-request.outputs.testcase_repo }}
+      ref: ${{ needs.parse-request.outputs.testcase_ref || 'main' }}
+      check_path: ${{ needs.parse-request.outputs.codelint_check_path }}
+  
   collect-result:
-    needs: [run-lava-check]
+    needs: [run-lava-check, run-codelint]
     if: ${{ !cancelled() }}
     permissions:
       issues: write
@@ -151,3 +167,6 @@ jobs:
         # RAVA actions result
 
         ${{ needs.run-lava-check.outputs.summary_content }}
+        
+        ${{ needs.run-codelint.outputs.summary_content }}
+  
