--- a/.github/workflows/rava-actions.yml
+++ b/.github/workflows/rava-actions.yml
@@ -124,7 +124,7 @@ jobs:
     with:
       repo: ${{ github.repository }}
       event_name: ${{ github.event_name }}
-      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.issue.number }}
+      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.number }}
       append_content: ${{ needs.parse-request.outputs.summary }}
 
   
@@ -162,7 +162,7 @@ jobs:
     with:
       repo: ${{ github.repository }}
       event_name: ${{ github.event_name }}
-      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.issue.number }}
+      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.number }}
       append_content: |
         # RAVA actions result
 
