--- a/.github/workflows/rava-actions.yml
+++ b/.github/workflows/rava-actions.yml
@@ -74,7 +74,7 @@ jobs:
           echo "testcase_ref=${testcase_ref}" >> $GITHUB_OUTPUT
           
           echo "codelint_check_path<<EOF" >> $GITHUB_OUTPUT
-          dirname "${lava_template}" >> $GITHUB_OUTPUT
+          echo "${lava_template}" >> $GITHUB_OUTPUT
           dirname "${lava_testcase_path}" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
 
