--- a/.github/workflows/rvck-actions.yml
+++ b/.github/workflows/rvck-actions.yml
@@ -21,7 +21,7 @@ jobs:
     with:
       repo: ${{ github.repository }}
       event_name: ${{ github.event_name }}
-      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.issue.number }}
+      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.number || github.event.issue.number }}
       append_content: |
         
         ---
@@ -92,7 +92,7 @@ jobs:
     with:
       repo: ${{ github.repository }}
       event_name: ${{ github.event_name }}
-      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.issue.number }}
+      event_id: ${{ github.event_name == 'issue_comment' && github.event.comment.id || github.event.number || github.event.issue.number }}
       append_content: |
         
         # RVCK result
