docker增加syzkaller执行所需依赖包，syzkaller workflow配置，测试执行

--- a/.github/actions-runner-image/Dockerfile
+++ b/.github/actions-runner-image/Dockerfile
@@ -16,6 +16,7 @@ RUN apt install gh lavacli gcc-riscv64-linux-gnu gcc-riscv64-unknown-elf \
 	qemu-system-riscv64 \
 	python3-ply python3-git \
 	git vim bash-completion tmux sudo rsync \
+	golang qemu-system-misc build-essential g++-riscv64-linux-gnu rpm tree zstd yq \
 	-y
 
-RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
+# RUN wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq && chmod +x /usr/bin/yq
